--- a/index.html
+++ b/index.html
@@ -228,10 +228,11 @@
     <section class="gallery">
         <h2 id="gallery">Gallery</h2>
         <div class="gallery-container">
-            <div class="image"><img src="images/food/img2.JPG" alt="40) Beef Stew with Rice Noodle"></div>
-            <div class="image"><img src="images/food/img3.JPG" alt="74) Marinated Grilled Lemon Grass Chicken & Fried Egg"></div>
-            <div class="image"><img src="images/food/img4.JPG" alt="97) Vermicelli w/ Marinated Prawns & Grilled Chicken"></div>
-            <div class="image"><img src="images/food/img5.JPG" alt=""></div>
+            <div class="image"><figure><img src="images/food/22-01.png" alt="22) Noodle Soup with Eye Round Steak and Beef Ball"><figcaption>22) Noodle Soup with Eye Round Steak and Beef Ball</figcaption></figure></div>
+            <div class="image"><figure><img src="images/food/110-01.png" alt="110) Spicy Rice Noodle Soup with Beef Flank, Ham & Chicken Meatballs"><figcaption>110) Spicy Rice Noodle Soup with Beef Flank, Ham & Chicken Meatballs</figcaption></figure></div>
+            <div class="image"><figure><img src="images/food/104-01.png" alt="104) Marinated Chicken & Sugar Cane Prawn Vermicelli"><figcaption>104) Marinated Chicken & Sugar Cane Prawn Vermicelli</figcaption></figure></div>
+            <div class="image"><figure><img src="images/food/97-01.png" alt="97) Marinated Prawns & Grilled Chicken Vermicelli"><figcaption>97) Marinated Prawns & Grilled Chicken Vermicelli</figcaption></figure></div>
+            <div class="image"><figure><img src="images/food/7-01.png" alt="07) Spring Rolls"><figcaption>07) Spring Rolls</figcaption></figure></div>
         </div>
 
         <div class="popup-image">
