--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Authentic Vietnamese cuisine in the heart of Guildford"/>
     <script src="scripts/script.js"></script>
-    <title>Pho Canada</title>
+    <title>Pho Canada | Vietnamese Cuisine</title>
 </head>
 <body>
     <div class="hero">
