--- a/index.html
+++ b/index.html
@@ -229,10 +229,11 @@
         <h2 id="gallery">Gallery</h2>
         <div class="gallery-container">
             <div class="image"><figure><img src="images/food/22-01.png" alt="16) House Special Noodle Soup"><figcaption>16) House Special Noodle Soup</figcaption></figure></div>
+            <div class="image"><figure><img src="images/food/69-01.png" alt="69) Sauté Diced Beef (Shaking Beef)"><figcaption>69) Sauté Diced Beef (Shaking Beef)</figcaption></figure></div>
             <div class="image"><figure><img src="images/food/110-01.png" alt="110) Spicy Rice Noodle Soup with Beef Flank, Ham & Chicken Meatballs"><figcaption>110) Spicy Rice Noodle Soup with Beef Flank, Ham & Chicken Meatballs</figcaption></figure></div>
+            <div class="image"><figure><img src="images/food/68-01.jpg" alt="68) Marinated Grilled Beef Short Ribs"><figcaption>68) Marinated Grilled Beef Short Ribs</figcaption></figure></div>
             <div class="image"><figure><img src="images/food/104-01.png" alt="103) Marinated Grilled Pork & Sugar Cane Prawn Vermicelli"><figcaption>103) Marinated Grilled Pork & Sugar Cane Prawn Vermicelli</figcaption></figure></div>
             <div class="image"><figure><img src="images/food/97-01.png" alt="97) Marinated Prawns & Grilled Chicken Vermicelli"><figcaption>97) Marinated Prawns & Grilled Chicken Vermicelli</figcaption></figure></div>
-            <div class="image"><figure><img src="images/food/7-01.png" alt="07) Spring Rolls"><figcaption>07) Spring Rolls</figcaption></figure></div>
             <div class="image"><figure><img src="images/food/93-01.png" alt="93) BBQ Beef Short Ribs with Vermicelli"><figcaption>93) BBQ Beef Short Ribs with Vermicelli</figcaption></figure></div>
             <div class="image"><figure><img src="images/food/131-01.png" alt="131) Vietnamese Coffee with Condensed Milk"><figcaption>131) Vietnamese Coffee with Condensed Milk</figcaption></figure></div>
         </div>
